--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 altair==5.5.0
 attrs==25.1.0
+black==25.1.0
 blinker==1.9.0
 cachetools==5.5.1
 certifi==2025.1.31
@@ -19,12 +20,15 @@ llvmlite==0.44.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+mypy-extensions==1.0.0
 narwhals==1.26.0
 numba==0.61.0
 numpy==2.1.3
 packaging==24.2
 pandas==2.2.3
+pathspec==0.12.1
 pillow==11.1.0
+platformdirs==4.3.6
 protobuf==5.29.3
 pyarrow==19.0.0
 pydeck==0.9.1
@@ -45,6 +49,7 @@ streamlit==1.42.0
 tenacity==9.0.0
 threadpoolctl==3.5.0
 toml==0.10.2
+tomli==2.2.1
 tornado==6.4.2
 tqdm==4.67.1
 typing_extensions==4.12.2
